# federated-deep-survival-analysis

./: .gitignore  README.md  pyproject.toml
federated_deep_survival_analysis/: __init__.py  centralised.py  client.py  log_config.py  metrics.py  server.py  simulation.py
federated_deep_survival_analysis/config/: base.yaml
federated_deep_survival_analysis/config/client_fn/: dcph.yaml
federated_deep_survival_analysis/config/dataset_fn/: dcph_support.yaml
federated_deep_survival_analysis/config/evaluate_fn/: dcph.yaml
federated_deep_survival_analysis/config/fit_config_fn/: dcph.yaml
federated_deep_survival_analysis/config/init_params/: dcph.yaml
federated_deep_survival_analysis/config/metrics_fn/: weighted_average.yaml
federated_deep_survival_analysis/config/model_fn/: dcph.yaml
federated_deep_survival_analysis/config/strategy/: fedadam.yaml  fedavg.yaml
federated_deep_survival_analysis/experiment_modules/deep_cox/: dcph_centralised.py  dcph_client.py  dcph_dataset.py  dcph_model.py  dcph_server.py
federated_deep_survival_analysis/federated_deep_cox/: README.md  dcph_centralised.py  dcph_client.py  dcph_dataset.py  dcph_main.py  dcph_model.py  dcph_server.py
federated_deep_survival_analysis/federated_deep_cox/config/: base.yaml
federated_deep_survival_analysis/federated_deep_cox/config/client_fn/: dcph.yaml
federated_deep_survival_analysis/federated_deep_cox/config/dataset_fn/: dcph_support.yaml
federated_deep_survival_analysis/federated_deep_cox/config/evaluate_fn/: dcph.yaml
federated_deep_survival_analysis/federated_deep_cox/config/model/: dcph.yaml
federated_deep_survival_analysis/federated_deep_cox/config/model_fn/: dcph.yaml
federated_deep_survival_analysis/federated_deep_cox/config/model_impl/: dcph.yaml
federated_deep_survival_analysis/federated_deep_cox/config/strategy/: fedadam.yaml  fedavg.yaml
federated_deep_survival_analysis/federated_example/: client.py  dataset.py  main.py  model.py  server.py  toy.py
federated_deep_survival_analysis/federated_example/config/: base.yaml  toy.yaml
federated_deep_survival_analysis/federated_example/config/model/: net.yaml
federated_deep_survival_analysis/federated_example/config/strategy/: fedadam.yaml  fedavg.yaml
federated_deep_survival_analysis/federated_example/config/toy_model/: mobilenetv2.yaml  resnet18.yaml
federated_deep_survival_analysis/hydra_toy_project/: toy.py
federated_deep_survival_analysis/hydra_toy_project/config/: toy.yaml
federated_deep_survival_analysis/hydra_toy_project/config/toy_model/: mobilenetv2.yaml  resnet18.yaml
federated_deep_survival_analysis/modules/deep_cox/: dcph_centralised.py  dcph_client.py  dcph_dataset.py  dcph_model.py
federated_deep_survival_analysis/utils/: log_config.py  tensorboard_writer.py
