[tool.poetry]
name = "federated-deep-survival-analysis"
version = "0.1.0"
description = ""
authors = ["Matteo Fordiani <matteofordiani@gmail.com>"]
readme = "README.md"
packages = [{include = "federated_deep_survival_analysis"}]

[tool.poetry.dependencies]
python = "~3.10"
auton-survival = {git = "https://github.com/matteo4diani/auton-survival.git", rev = "fork/mfordiani-auton-survival"}
flwr = {extras = ["simulation"], version = "^1.5.0"}
torch = "^1.13"
torchvision = "^0.14"
hydra-core = "^1.3.2"
tensorflow = {version = "~2.14" }
tensorflow-macos = { version = "~2.14", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "~2.14", platform = "win32" }
tensorflow-cpu = [
    { version = "~2.14", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "~2.14", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "~2.14", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
verstack = "^3.8.12"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.black]
line-length = 60

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
